# bearinmind-be

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 1de0d8e57940_add_preferred_language.py  20250409_0001_initial.py  20260409_0002_create_users.py  20260413_0003_create_core_tables.py  20260414_0004_add_conversation_title.py  20260414_0005_add_conversation_session_meta.py  20260414_0006_add_message_ui_payload.py  20260415_0007_add_user_microsoft.py  20260416_0008_add_notification_payload.py  20260418_0009_add_preferred_language.py  57bdd5662978_add_preferred_language.py
app/: __init__.py  main.py
app/ai/: constants.py  graph.py
app/api/: deps.py  router.py
app/core/: config.py  llm_tracking.py  logging_config.py  security.py
app/db/: session.py
app/integrations/: hubspot_client.py
app/models/: __init__.py  conversation.py  notification.py  opportunity.py  unit.py  user.py  (+1 more)
docs/: project_overview.md  user_stories.md
scripts/: export_openapi.py  llm_smoke.py  parse_uv_lock.py  seed_units.py  verify.py  version.py
tests/: conftest.py  test_chat_route.py  test_context_analyzer.py  test_dev_smoke.py  test_health.py  test_hrm.py  test_hubspot_client.py  test_hubspot_routes.py  test_hubspot_service.py  test_integration_ready.py  test_matching_agent.py  test_notification_service.py  test_opportunity_service.py  test_seed_units_data.py  test_smoke_graph.py  test_unit_vector_indexer.py  test_us1_notification.py  test_us3_unit_capabilities.py  test_vector_search.py
(+64 files in other folders)
