[project]
name = "bearinmind-be"
version = "0.1.7"
description = "Bear In Mind — Backend & AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.0",
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.0",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.1.0",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "redis>=7.4.0",
    "ruff>=0.15.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
ci = "scripts.verify:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # handled by formatter; avoid churn
    "B008", # FastAPI's `Depends(...)` is idiomatic in endpoint signatures
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101", # allow assert in tests (if we enable security rules later)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
